# data-engineering-101

./: Data Engineering.ipynb  README.md  codebook-2.csv  codebook.csv  pyproject.toml
versions/: Taco Sales - v1.csv  Taco Sales - v1.xlsx  Taco Sales - v2.csv  Taco Sales - v3.csv  Taco Sales - v4.csv  Taco Sales - v5.csv  Taco Sales - v6.csv  Weather - v1.csv  Weather - v2.csv
