[tool.poetry]
name = "data-engineering-101"
version = "0.1.0"
description = ""
authors = ["Erik Wiffin <erik.wiffin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
